--- a/src/css/base.css
+++ b/src/css/base.css
@@ -271,7 +271,7 @@ button:hover {
   margin-left: 1vw;
 }
 
-.MyPriject .targetFire li::before {
+.MyPriject .Digikala li::before {
   content: "●";
   color: red;
   font-weight: bold;
