--- a/src/base.css
+++ b/src/base.css
@@ -15,12 +15,31 @@ body {
 }
 
 body {
-  background: rgb(2, 2, 36);
-  background-repeat: no-repeat;
-  background: rgb(5, 5, 47);
-  background: no-repeat linear-gradient(177deg, rgb(1, 1, 46) 31%, rgb(2, 2, 27) 77%);
-  height: 100%;
+  min-width: 400px;
   color: white;
+  height: 100%;
+}
+
+.content {
+  overflow: auto;
+  position: relative;
+}
+
+.content::before {
+  background-image: url("/public/images/back.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: brightness(0.5);
+  filter: brightness(0.5);
 }
 
 button {
@@ -95,8 +114,13 @@ button:hover {
   border-radius: 50%;
 }
 
-.Skills .right ul {
-  background-color: rgba(2, 2, 24, 0.706);
+.Skills .right .rightSub {
+  background-color: rgba(59, 4, 131, 0.421);
+  border-radius: 20px;
+}
+.Skills .left .leftSub {
+  background-color: rgba(59, 4, 131, 0.421);
+  border-radius: 20px;
 }
 .Skills .left .viewElemHtml,
 .Skills .left .viewElemcss,
@@ -155,7 +179,7 @@ button:hover {
 .MyPriject .projectCard {
   transition: 0.5s;
   position: relative;
-  background-color: rgba(16, 16, 53, 0.322);
+  background-color: rgba(59, 4, 131, 0.421);
 }
 .MyPriject .projectCard .overlayCard {
   position: absolute;
@@ -230,6 +254,13 @@ button:hover {
   display: inline-block;
   margin-left: 1vw;
 }
+.MyPriject .weather li::before {
+  content: "●";
+  color: rgb(131, 201, 217);
+  font-weight: bold;
+  display: inline-block;
+  margin-left: 1vw;
+}
 
 .baseClassPageNaite {
   font-size: 1.1rem;
@@ -265,12 +296,96 @@ button:hover {
   border-radius: 51%;
 }
 
-.CallMe li a {
-  font-size: var(--fontXl);
-  color: white;
-  transition: 0.2s;
+.CallMe {
+  position: fixed;
+  right: 3%;
+  bottom: 5%;
+  z-index: 10000;
 }
-.CallMe li a:hover {
+.CallMe button {
+  border-radius: 51%;
+  width: 3.3333333333rem;
+  height: 3.3333333333rem;
+}
+.CallMe .containerMenu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.CallMe .containerMenu .menu {
+  overflow: hidden;
+  top: -11.3rem;
+  position: absolute;
+  transform: rotate(-90deg);
+}
+.CallMe .containerMenu .mainDivMenu {
+  width: 0%;
+  opacity: 0;
+  border-radius: 25px;
+  background-color: rgba(151, 10, 151, 0.774);
+}
+.CallMe .containerMenu .mainDivMenu .itemSocial {
+  transform: rotate(90deg);
+  font-size: 1.5rem;
+}
+.CallMe .containerMenu .mainDivMenu .itemSocial a {
+  color: white;
+  transition: 0.3s;
+}
+.CallMe .containerMenu .mainDivMenu .itemSocial a:hover {
   color: goldenrod;
-  box-shadow: rgb(62, 111, 163) 0px 1.5vw 2vw -10px;
+}
+
+.openMenu {
+  width: 0%;
+  -webkit-animation: openMenuAnime 1s forwards;
+  animation: openMenuAnime 1s forwards;
+}
+
+.closeMenu {
+  width: 100%;
+  -webkit-animation: closeMenuAnime 1s forwards;
+  animation: closeMenuAnime 1s forwards;
+}
+
+@-webkit-keyframes openMenuAnime {
+  0% {
+    width: 0%;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+@keyframes openMenuAnime {
+  0% {
+    width: 0%;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes closeMenuAnime {
+  0% {
+    width: 100%;
+    opacity: 1;
+  }
+  100% {
+    width: 0%;
+    opacity: 0;
+  }
+}
+@keyframes closeMenuAnime {
+  0% {
+    opacity: 1;
+    width: 100%;
+  }
+  100% {
+    opacity: 0;
+    width: 0%;
+  }
 }/*# sourceMappingURL=base.css.map */
