--- a/src/base.scss
+++ b/src/base.scss
@@ -14,13 +14,30 @@ body {
 }
 
 body {
-  // background: rgb(1, 2, 22);
-  background: rgb(2, 2, 36);
-  background-repeat: no-repeat;
-  background: rgb(5, 5, 47);
-  background: no-repeat linear-gradient(177deg, rgb(1, 1, 46) 31%, rgb(2, 2, 27) 77%);
-  height: 100%;
+  min-width: 400px;
   color: white;
+  height: 100%;
+}
+
+.content {
+  overflow: auto;
+  position: relative;
+}
+.content::before {
+  background-image: url("/public/images/back.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: brightness(0.5);
+  filter: brightness(0.5);
 }
 button {
   background-color: rgb(16, 160, 112);
