--- a/src/base.css
+++ b/src/base.css
@@ -110,6 +110,9 @@ button:hover {
   font-size: var(--fontMdBold);
   color: rgb(24, 154, 240);
 }
+.AboutMe .aboutMeCOntent {
+  line-height: 2.5rem;
+}
 .AboutMe .right img {
   border-radius: 50%;
 }
