--- a/src/Components/AboutMe/_AboutMe.scss
+++ b/src/Components/AboutMe/_AboutMe.scss
@@ -3,6 +3,9 @@
     font-size: var(--fontMdBold);
     color: rgb(24, 154, 240);
   }
+  .aboutMeCOntent {
+    line-height: 2.5rem;
+  }
   .right {
     img {
       border-radius: 50%;
