--- a/src/Components/Skills/_Skills.scss
+++ b/src/Components/Skills/_Skills.scss
@@ -32,6 +32,9 @@
     .viewElemBootsratp {
       background-color: rgb(98, 5, 185);
     }
+    .viewElemMaterialUi {
+      background-color: aqua;
+    }
     .viewElemAxios {
       background-color: orange;
     }
@@ -50,6 +53,9 @@
     }
     .viewElemTypescript {
       background-color: #3178c6;
+    }
+    .viewElemGithub {
+      background-color: rgb(85, 85, 85);
     }
   }
 
